css/jssynth.scss
$font-family: "Helvetica Neue", arial, sans-serif;
$orange: orange;
$light-orange: papayawhip;
$red: #c00;
$red-highlight: #f24;
$black: #130f30;
$white: #fff;


body {
  margin: 0;
  padding: 0;
  font-family: $font-family;
  font-size: 20px;
  background: $white;
  color: $black;
  line-height: 1.5em;
  font-weight: 300;
}

.logo {
  line-height: 6.0rem;
  font-weight: bold;
  color: $red;
}

#transport {
  -webkit-justify-content: center;
  justify-content: center;
}

.section-header {
  line-height: 1.5rem;
}

label.radioLabel {
  margin-right: 0.75em;
}

.indented {
  padding-left: 1.0rem;
}

.underlinedInput {
  outline: none;
  border: solid $black;
  border-width: 0 0 1px 0;
  border-radius: 0;  /* For iOS */
  width: 20%;
}

.control {
  display: -webkit-flex;
  display: flex;
  -webkit-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  align-items: center;
}

.control-label {
  width: 30%;
  box-sizing: border-box;
}

.control .annotated-input {
  -webkit-flex: 1;
  flex: 1;
  display: -webkit-flex;
  display: flex;
  -webkit-align-items: center;
  align-items: center;
}

.control .annotated-input input {
  -webkit-flex: 1;
  flex: 1;
}

.control .annotated-input span {
  width: 5.0rem;
  padding-left: 0.5rem;
  box-sizing: border-box;
}

.popup-box {
  background: $white;
  position: absolute;
  border: 2px solid #ddd;
  border-radius: 10px;
}

.popup-box::before {
    content: "";
    position: absolute;
    bottom: 100%;
    right: 1.25rem;
    border-width: 1.25rem;
    border-style: solid;
    border-color: transparent transparent #ddd transparent;
}

.popup-box::after {
    content: "";
    position: absolute;
    bottom: 100%;
    right: 1.45rem;
    border-width: 1.1rem;
    border-style: solid;
    border-color: transparent transparent $white transparent;
}

input[type='text'].ng-invalid.ng-dirty {
  background: #f66;
}

input[type='text'] {
  font-family: $font-family;
  font-size: 1.20rem;
  font-weight: 300;
  color: $black;
}

input[type='radio'] {
  width: auto;
  -webkit-appearance: none;
  border-radius: 10px;
  width: 1.0rem;
  height: 1.0rem;
  outline: none;
  border: 2px solid $black;
  box-sizing: border-box;
  vertical-align: text-top;
}

input[type='radio']:unchecked { }

input[type='radio']:checked {
  background-color: $black;
}

input[type='range'] {
  background-color: #ccc;
  -webkit-appearance: none;
  height: 2px;
  margin: 0;
  padding: 0;
  outline: none;
  border-radius: 10px;
}

input[type='range']::-webkit-slider-thumb {
  -webkit-appearance: none;
  height: 1.5em;
  width: 1.5em;
  border-radius: 0.75rem;
  background: $black;
}

input[type='range']::-webkit-slider-thumb:hover {
  background: $red;
}

input[type='range']::-webkit-slider-thumb:active {
  background: $red-highlight;
}

input[type=range]::-moz-focus-outer {
  border: 0;
}

input[type='range']::-moz-range-thumb {
  height: 1.5em;
  width: 1.5em;
  border-radius: 0.75rem;
  background: $black;
  border: 0;
}

input[type='range']::-moz-range-thumb:hover {
  background: $red;
}

input[type='range']::-moz-range-thumb:active {
  background: $red-highlight;
}

input[type='range']::-moz-range-track {
  display: none;
  background: #ccc;
  border: 0;
  outline: none;
}

.helperToggle {
  color: #0af;
  cursor: pointer;
}

.note-container {
  width: 6.25%;
  min-width: 3.0rem;
  box-sizing: border-box;
  padding-left: 2px;
  padding-right: 2px;
}

.note-column-header {
  color: #ccc;
}

input.note {
  width: 100%;
  text-align: center;
  box-sizing: border-box;
  outline: none;
  border: 0;
  border-bottom: 1px solid $black;
  border-radius: 0;  /* For iOS */
  margin: 0 0 1px 0;
  font-size: 1.0rem;
  line-height: 2.0rem;
  font-weight: normal;
}

input.note:focus {
  background: #f3f3f3;
}

button {
  border: 3px solid #ddd;
  background: #ddd;
  outline: none;
  font-size: 1.0rem;
  padding: 0.75rem;
  font-family: $font-family;
  border-radius: 10px;
  color: $black;
  cursor: pointer;
  margin: 0;
}

.button-small {
  padding: 0.25rem 0.5rem;
  border-width: 2px;
}

.button-full {
}

.button-hollow {
  background: $white;
  border-color: #ccc;
}

.button-enabled, .button-enabled:hover {
  background: $orange;
  border-color: $orange;
  color: $white;
}

.lightText { color: #aaa; }

.list-style-none { list-style-type: none; }

.h1 { font-size: 6.0rem; }
.h2 { font-size: 3.0rem; }
.h3 { font-size: 1.5rem; }
.h4 { font-size: 1.0rem; }

.mt0 { margin-top: 0; }
.mb0 { margin-bottom: 0; }
.ml0 { margin-left: 0; }
.mt1 { margin-top: 1.5rem; }
.mr1 { margin-right: 1.5rem; }
.mb1 { margin-bottom: 1.5rem; }
.ml1 { margin-left: 1.5rem; }
.mt2 { margin-top: 3.0rem; }
.mb2 { margin-bottom: 3.0rem; }
.mt3 { margin-top: 4.5rem; }

.pt0 { padding-top: 0.0rem; }
.pb0 { padding-bottom: 0.0rem; }
.pl0 { padding-left: 0.0rem; }
.pl1 { padding-left: 1.5rem; }
.pr1 { padding-right: 1.5rem; }
.pt1 { padding-top: 1.5rem; }
.pb1 { padding-bottom: 1.5rem; }
.pt2 { padding-top: 3.0rem; }

.bt  { border-top: 1px solid #ddd; }
.bb  { border-bottom: 1px solid #ddd; }
.bl  { border-left: 1px solid #ddd; }
.br  { border-right: 1px solid #ddd; }

.center { text-align: center; }
.right  { float: right; }

.round { border-radius: 50%; }

.underline { text-decoration: underline; }

.flex { display: -webkit-flex; display: flex; }
.block { display: block; }
.inline-block { display: inline-block; }
.display-none { display: none; }

.flex-uniform-size { -webkit-flex: 1; flex: 1; }
.flex-column { -webkit-flex-direction: column; flex-direction: column; }
.flex-align-center { -webkit-align-items: center; align-items: center; }
.flex-justify-center { -webkit-justify-content: center; justify-content: center; }

.overflow-auto     { overflow: auto; }
.overflow-hidden-x { overflow-x: hidden; }
.overflow-scroll-x { overflow-x: scroll; }

.border-box { box-sizing: border-box; }
.full-width { width: 100%; }

.no-whitespace-wrap { white-space: nowrap; }

.pointer { cursor: pointer; }

.enabled {
  background: $orange;
  color: $white;
}

.enabledlight {
  background: $light-orange;
  color: $white;
}

.selectedOption {
  border: #ddd 2px solid;
  background: #ddd;
}

.paneTab {
  color: $black;
  text-decoration: none;
}

.paneTabUnselected {
  border-bottom: 2px solid #ddd;
}

.paneTabSelected {
  border-bottom: 4px solid $orange;
}

.expanded {
  width: 200px;
}

.expanded > li > .short-name {
  display: none;
}

.contracted {
  width: 40px;
  overflow: hidden;
}

.contracted > li {
  padding-right: 0;
}

.contracted > li > button {
  display: none;
}

.contracted > li > input {
  display: none;
}

.instrument-panel {
  min-width: 600px;
}


@media (hover) {
  .button-hollow:hover {
    background: $light-orange;
    border-color: $orange;
    color: $orange;
  }
}

@media (max-width: 1024px) {

}

@media (max-width: 768px) {
  #header {
    flex-flow: row wrap;
  }

  #logo-container {
    order: 1;
    flex: 1 50%;
  }

  #transport {
    order: 3;
    flex: 1 100%;
    padding-top: 1.5rem;
    -webkit-justify-content: space-between;
    justify-content: space-between;
  }

  #download-container {
    order: 2;
    flex: 1 50%;
  }

  .control {
    -webkit-align-items: flex-start;
    align-items: flex-start;
  }

  .control-label {
    width: 35%;
  }

  .waveformOptionsContainer {
    -webkit-flex-wrap: wrap;
    flex-wrap: wrap;
  }

  .radioContainer {
    -webkit-flex: 0 0 50%;
    flex: 0 0 50%;
  }

  .instrument-panel-container {
    flex-direction: column;
    align-items: stretch;
    width: 100%;
  }

  .instrument-panel {
    flex: 1;
    min-width: 0;
    margin: 0;
    padding-left: 0;
    padding-right: 0;
    padding-bottom: 1.5rem;
    border-left: 0;
    border-right: 0;
    border-bottom: 1px solid #ddd;
  }

  .instrument-panel:last-child {
    border-bottom: 0;
    padding-bottom: 0;
  }
}

@media (max-width: 480px) {
  #transport .control {
    -webkit-flex-direction: row;
    flex-direction: row;
  }

  .control {
    -webkit-flex-direction: column;
    flex-direction: column;
  }

  .control-label {
    width: 100%;
  }

  .annotated-input {
    width: 100%;
  }

  .indented {
    padding-left: 0;
  }
}

